Check files/URLs for existence and well-formedness
In JobConfig.